// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adding blocks Should insert content using the placeholder and the regular inserter 1`] = `
"<!-- wp:paragraph -->
<p>Paragraph block</p>
<!-- /wp:paragraph -->

<!-- wp:quote -->
<blockquote class=\\"wp-block-quote\\"><p>Quote block</p></blockquote>
<!-- /wp:quote -->

<!-- wp:image -->
<figure class=\\"wp-block-image\\"><img alt=\\"\\"/></figure>
<!-- /wp:image -->

<!-- wp:paragraph -->
<p></p>
<!-- /wp:paragraph -->"
`;

exports[`adding blocks Should insert content using the placeholder and the regular inserter 2`] = `
"<!-- wp:paragraph -->
<p>Paragraph block</p>
<!-- /wp:paragraph -->

<!-- wp:quote -->
<blockquote class=\\"wp-block-quote\\"><p>Quote block</p></blockquote>
<!-- /wp:quote -->"
`;

exports[`adding blocks Should insert content using the placeholder and the regular inserter 3`] = `
"<!-- wp:paragraph -->
<p>Paragraph block</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>Second paragraph</p>
<!-- /wp:paragraph -->

<!-- wp:quote -->
<blockquote class=\\"wp-block-quote\\"><p>Quote block</p></blockquote>
<!-- /wp:quote -->

<!-- wp:preformatted -->
<pre class=\\"wp-block-preformatted\\">Pre text<br><br>Foo</pre>
<!-- /wp:preformatted -->

<!-- wp:shortcode -->
[myshortcode]With multiple
lines preserved[/myshortcode]
<!-- /wp:shortcode -->"
`;
